--- a/yumshare-client/src/styles.scss
+++ b/yumshare-client/src/styles.scss
@@ -193,9 +193,7 @@
   ));
 }
 html, body { height: 100%;
-::-webkit-scrollbar {
-  display: none;
-}
+
 
 }
 body { margin: 0; font-family: Noto Sans, sans-serif; }
@@ -204,7 +202,7 @@ body { margin: 0; font-family: Noto Sans, sans-serif; }
 }
 
 html, body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
   overflow: hidden;
