--- a/yumshare-client/src/app/app.component.scss
+++ b/yumshare-client/src/app/app.component.scss
@@ -1,8 +1,9 @@
+
 .app-container {
   display: flex;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow: scroll;
   position: relative;
 }
 
@@ -35,7 +36,7 @@
   flex-direction: column;
   min-width: 0;
   width: 100%;
-  
+
 }
 
 .content-container{
@@ -50,7 +51,7 @@
     height: 100vh;
     z-index: 1000;
     box-shadow: 2px 0 8px rgba(0, 0, 0, 0.15);
-    
+
     &.sidebar-closed {
       transform: translateX(-100%);
       width: 17.5rem;
@@ -79,7 +80,7 @@
   .main-content {
     padding-left: 0;
     width: 100%;
-    
+
   }
   .content-container{
  padding: 0 0 0 16px;
@@ -111,7 +112,7 @@
   }
   .main-content {
     width: 100vw !important;
-    
+
     margin-left: 0 !important;
     min-width: 0;
   }
