--- a/yumshare-client/src/app/pages/search/search.component.html
+++ b/yumshare-client/src/app/pages/search/search.component.html
@@ -1,1 +1,50 @@
-<p>search works!</p>
+<div class="search-container">
+  <h2>Search</h2>
+
+
+  <div class="search-bar">
+    <input type="text" placeholder="Search ..." [(ngModel)]="keyword" />
+    <select [(ngModel)]="selectedCategory">
+      <option value="">All Categories</option>
+      <option *ngFor="let c of categories" [value]="c">{{ c }}</option>
+    </select>
+    <input type="text" placeholder="Search Author ..." [(ngModel)]="author" />
+    <button class="search-btn" (click)="onSearch()">
+      <mat-icon>search</mat-icon>
+    </button>
+  </div>
+
+
+  <p *ngIf="results.length > 0">Showing results {{ results.length }} for keyword: <b>{{ keyword }}</b></p>
+<div class="results-grid">
+  @for (item of results; track item.title) {
+    <div class="container-card">
+      <mat-card class="dish-card" appearance="outlined">
+        <img mat-card-image [src]="item.image" alt="Dish Image">
+        <mat-card-content>
+          <h2 class="dish-title">{{ item.title }}</h2>
+          <p class="dish-description">
+            {{ item.description }}
+          </p>
+        </mat-card-content>
+        <div class="rating">
+          <mat-icon *ngFor="let star of [1,2,3,4,5]">
+            {{ star <= item.rating ? 'star' : 'star_border' }}
+          </mat-icon>
+        </div>
+        <mat-card-actions class="card-footer">
+          <div class="user-info">
+            <img class="avatar" [src]="item.authorAvatar" alt="User avatar">
+            <span class="username">{{ item.author }}</span>
+          </div>
+          <div class="actions">
+            <mat-icon>favorite_border</mat-icon>
+            <mat-icon>share</mat-icon>
+          </div>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+
+  }
+</div>
+</div>
