--- a/yumshare-client/src/app/app.component.scss
+++ b/yumshare-client/src/app/app.component.scss
@@ -39,7 +39,12 @@
 }
 
 .content-container {
-  padding: 0 0 0 16px;
+  padding: 0 0 0 0px;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch; /* iOS Safari mượt hơn /
+  scroll-behavior: smooth;          / Mượt trên hầu hết browser */
+  overscroll-behavior: contain;
+  will-change: scroll-position;
 }
 
 /* ---------- Backdrop (mobile overlay) ---------- */
