--- a/yumshare-client/src/app/pages/my-recipe/my-recipe.component.html
+++ b/yumshare-client/src/app/pages/my-recipe/my-recipe.component.html
@@ -1,1 +1,117 @@
-<p>my-recipe works!</p>
+<div class="content-container">
+  <div class="my-recipe-header">
+    <h1>My Recipes</h1>
+    <p>Here, you can manage all the recipes you've posted. Feel free to click on any recipe to edit or delete it. You can also view comments and feedback from others. Don’t forget to keep your recipes updated and share your culinary adventures with the community!</p>
+  </div>
+
+  <div class="sort-and-category">
+    <div class="sort-by-date">
+      <mat-form-field>
+        <input matInput [matDatepicker]="datepicker" [(ngModel)]="value" placeholder="Sort by date">
+        <mat-datepicker #datepicker></mat-datepicker>
+        <mat-datepicker-toggle [for]="datepicker" matSuffix></mat-datepicker-toggle>
+      </mat-form-field>
+    </div>
+
+    <div class="category">
+      <button mat-button [matMenuTriggerFor]="Category">Category<span class="material-symbols-outlined">arrow_drop_down</span></button>
+      <mat-menu #Category="matMenu">
+        <button mat-menu-item [matMenuTriggerFor]="Meat">Meat</button>
+        <button mat-menu-item [matMenuTriggerFor]="SeaFood">Sea food</button>
+        <button mat-menu-item [matMenuTriggerFor]="Vegetable">Vegetable</button>
+        <button mat-menu-item [matMenuTriggerFor]="Drinks">Drinks</button>
+      </mat-menu>
+
+      <mat-menu #Meat="matMenu">
+        <button mat-menu-item>Beef</button>
+        <button mat-menu-item>pork</button>
+        <button mat-menu-item>Chicken</button>
+        <button mat-menu-item>Sheep</button>
+      </mat-menu>
+
+      <mat-menu #SeaFood="matMenu">
+        <button mat-menu-item>fish</button>
+        <button mat-menu-item>Octopus</button>
+        <button mat-menu-item>Crab</button>
+        <button mat-menu-item>shrimp</button>
+      </mat-menu>
+
+      <mat-menu #Vegetable="matMenu">
+        <button mat-menu-item>Salad</button>
+        <button mat-menu-item>Potato</button>
+        <button mat-menu-item>Carrot</button>
+        <button mat-menu-item>Tomato</button>
+        <button mat-menu-item>Beans</button>
+      </mat-menu>
+
+      <mat-menu #Drinks="matMenu">
+        <button mat-menu-item>Juices</button>
+        <button mat-menu-item>Milk</button>
+        <button mat-menu-item>Tea</button>
+        <button mat-menu-item>smoothie</button>
+        <button mat-menu-item>Coffee</button>
+      </mat-menu>
+
+    </div>
+  </div>
+
+  <div class="container">
+    @for (recipe of displayedRecipes; track recipe) {
+      <div class="recipe-card">
+        <div class="recipe-image">
+          <img src="" alt="Recipe Image">
+        </div>
+        <div class="recipe-content">
+          <div class="recipe-header">
+            <div class="name-and-author">
+              <h3 class="recipe-title">{{ recipe.name }}</h3>
+              <p class="recipe-author">by {{ recipe.author }}</p>
+            </div>
+            <div class="example-button-row">
+              <div class="example-flex-container">
+                <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+                  <mat-icon>more_vert</mat-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="recipe-description">
+            <p>{{ recipe.description }}</p>
+          </div>
+          <div class="recipe-footer">
+            <span class="recipe-date">{{ recipe.date }}</span>
+          </div>
+        </div>
+      </div>
+    }
+  </div>
+
+  <div class="pages-navigation">
+    <div class="example-button-row">
+      <div class="example-flex-container">
+        <div class="example-button-container">
+          <button mat-mini-fab aria-label="First page" (click)="goToFirst()" [disabled]="pageIndex === 0">&lt;&lt;</button>
+          <button mat-mini-fab aria-label="Previous page" (click)="goToPrev()" [disabled]="pageIndex === 0">&lt;</button>
+          <ng-container *ngIf="pageNumbers[0] > 0">
+            <button mat-mini-fab (click)="goToPage(0)">1</button>
+            <span *ngIf="pageNumbers[0] > 1">...</span>
+          </ng-container>
+          @for (page of pageNumbers; track page) {
+            <button
+              mat-mini-fab
+              [class.active]="page === pageIndex"
+              (click)="goToPage(page)">
+              {{ page + 1 }}
+            </button>
+          }
+          <ng-container *ngIf="pageNumbers[pageNumbers.length - 1] < totalPages - 1">
+            <span *ngIf="pageNumbers[pageNumbers.length - 1] < totalPages - 2">...</span>
+            <button mat-mini-fab (click)="goToPage(totalPages - 1)">{{ totalPages }}</button>
+          </ng-container>
+          <button mat-mini-fab aria-label="Next page" (click)="goToNext()" [disabled]="pageIndex === totalPages - 1">&gt;</button>
+          <button mat-mini-fab aria-label="Last page" (click)="goToLast()" [disabled]="pageIndex === totalPages - 1">&gt;&gt;</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
