feat:implement ui/ux faq-message-recipesdetail

--- a/yumshare-client/src/app/components/message-item/message-item.component.scss
+++ b/yumshare-client/src/app/components/message-item/message-item.component.scss
@@ -93,7 +93,7 @@
 }
 
 .own-bubble .message-bubble {
-  background: linear-gradient(135deg, #88C533 10%, #0052cc 90%);
+  background: #88C533;
   color: #fff;
 
   &:before {
