--- a/yumshare-client/src/app/pages/recipe-detail/recipe-detail.component.html
+++ b/yumshare-client/src/app/pages/recipe-detail/recipe-detail.component.html
@@ -51,8 +51,11 @@
           <div class="avatar"></div>
           <span class="username">User Name</span>
         </div>
-        <input type="checkbox" id="followToggle" class="follow-checkbox">
-        <label for="followToggle" class="follow-btn"></label>
+        <mat-checkbox
+          class="follow-toggle"
+          [(ngModel)]="isFollowed">
+          {{ isFollowed ? 'Followed' : 'Follow' }}
+        </mat-checkbox>
       </div>
 
     </div>
