--- a/yumshare-client/src/app/pages/message/message.component.scss
+++ b/yumshare-client/src/app/pages/message/message.component.scss
@@ -5,7 +5,7 @@
   height: 100% ;
   background: #fff;
   overflow: hidden;
-  gap: 1rem;
+  //gap: 1rem;
 }
 //.user-list{
 //  width: 25%;
@@ -24,12 +24,11 @@
   padding-top: 20rem;
 }
 .chat-area{
-  width: 74%;
-  height: 94%;
-  margin-top: 1rem;
-  border: 1px solid #dddddd;
-  border-radius: 1rem;
-  margin-right: 1rem;
+  width: 100%;
+  height: 100%;
+  //margin-top: 1rem;
+  //border: 1px solid #dddddd;
+  margin: 0;
 }
 /* Responsive cho màn nhỏ */
 @media (max-width: 920px) {
