--- a/yumshare-client/src/app/pages/recipe-detail/recipe-detail.component.html
+++ b/yumshare-client/src/app/pages/recipe-detail/recipe-detail.component.html
@@ -4,12 +4,12 @@
     <div class="food-name">
       <h1 class="title">Recipe Name</h1>
     </div>
-    <div class="mieu-ta">
-      <div class="trai">
-        <img class="hinh-mon-an" src="https://www.shutterstock.com/shutterstock/videos/3608011573/thumb/1.jpg?ip=x480">
+    <div class="describe">
+      <div class="lefttt">
+        <img class="food-pic" src="https://www.shutterstock.com/shutterstock/videos/3608011573/thumb/1.jpg?ip=x480">
       </div>
-      <div class="phai">
-        <p class="mieu-ta-monan">Spaghetti is one of the most beloved pasta dishes in the world, known for its long, thin strands and endless versatility. Whether paired with a rich tomato sauce, creamy Alfredo, or simply tossed with olive oil and garlic, spaghetti offers comfort and flavor in every bite. It’s a classic that can be enjoyed at family dinners, quick lunches, or festive gatherings alike.</p>
+      <div class="righttt">
+        <p class="food-description">Spaghetti is one of the most beloved pasta dishes in the world, known for its long, thin strands and endless versatility. Whether paired with a rich tomato sauce, creamy Alfredo, or simply tossed with olive oil and garlic, spaghetti offers comfort and flavor in every bite. It’s a classic that can be enjoyed at family dinners, quick lunches, or festive gatherings alike.</p>
         <div class="block">
           <mat-chip>One fish</mat-chip>
           <mat-chip>Sushi Platter</mat-chip>
@@ -118,5 +118,5 @@
       <iframe class="clip" width="650" height="400" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <app-comment></app-comment>
+  </div>
 </div>
-
